--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="ambil_paket">Ambil Paket</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="kurir">
+        <item>gojek</item>
+        <item>jnt</item>
+        <item>grab</item>
+    </string-array>
 </resources>
